modify hosts file

--- a/roles/common/tasks/main.yaml
+++ b/roles/common/tasks/main.yaml
@@ -21,3 +21,11 @@
     state: present
     name: "{{ item }}"
   with_items: "{{ packages_to_install }}"
+- name: Add IP address of all hosts to all hosts
+  lineinfile:
+    dest: /etc/hosts
+    regexp: '.*{{ item }}$'
+    line: "{{ hostvars[item].ansible_host }} {{item}}"
+    state: present
+  when: hostvars[item].ansible_host is defined
+  with_items: "{{ groups.all }}"
