--- a/roles/common/tasks/main.yaml
+++ b/roles/common/tasks/main.yaml
@@ -21,11 +21,23 @@
     state: present
     name: "{{ item }}"
   with_items: "{{ packages_to_install }}"
-- name: Add IP address of all hosts to all hosts
+- name: add hostname to /etc/hosts
+  vars:
+    comment: '# added by ansible'
   lineinfile:
     dest: /etc/hosts
-    regexp: '.*{{ item }}$'
-    line: "{{ hostvars[item].ansible_host }} {{item}}"
+    regexp: "127[.]0[.]0[.]1.*"
+    line: "127.0.0.1 localhost.localdomain localhost {{ ansible_hostname }} {{ comment }}"
     state: present
-  when: hostvars[item].ansible_host is defined
-  with_items: "{{ groups.all }}"
+    backup: yes
+- name: add IP address of all hosts to /etc/hosts
+  vars:
+    comment: '# added by ansible'
+  lineinfile:
+    dest: /etc/hosts
+    regexp: ".* {{ item }} {{ comment }}"
+    line: "{{ hostvars[item]['ansible_env'].SSH_CONNECTION.split(' ')[2] }} {{ item }} {{ comment }}"
+    state: present
+    backup: yes
+  when: ansible_hostname != item
+  loop: "{{ query('inventory_hostnames', 'all') }}"
